--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,32 @@
+.add-div {
+  background-color: greenyellow;
+  width: 50%;
+  margin: auto;
+  border-radius: 10px;
+  padding: 10px;
+  border-style: solid;
+  border-color: darkgreen;
+  margin-bottom: 5px;
+  }
+  
+  .poisto-btn {
+    margin-top: 2px;
+    border-radius: 5px;
+    padding: 5px;
+    min-width: 30px;
+    transform: translateX(550%);    
+  }
+  
+  .add-btn {
+    margin: 5px;
+    
+    background-color: lime;
+  }
 
+  .add-btn:hover {
+    background-color: gold;
+  }
+  
 
 #root {
   max-width: 1280px;
